# test-package

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
testpkg/: core.py
testpkg_datafile.egg-info/: PKG-INFO  SOURCES.txt
