[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "testpkg-dfile"
dynamic = ["version"]
description = "Test package that requires an installed data file"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["testpkg", "testpkg.data"]

[tool.setuptools.package-data]
testpkg = ["data/*.txt"]

[tool.setuptools.dynamic]
version = { attr = "testpkg.__version__" }

