[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "testpkg-dfile"
version = "0.1.7"
description = "Test package that requires an installed data file"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["testpkg", "testpkg.data"]

[tool.setuptools.package-data]
testpkg = ["data/*.txt"]

